<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightPrimaryColor"
        android:padding="16dp"
        android:text="@string/home_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/now_playing" />

    <Button
        android:id="@+id/my_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/now_playing"
        android:text="@string/my_library" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/my_library"
        android:text="@string/help" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/help"
        android:text="@string/search" />
</RelativeLayout>
